Add docker config

--- a/config/database.yml
+++ b/config/database.yml
@@ -47,9 +47,7 @@ test:
 #
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
-#
 production:
-  <<: *default
-  database: qs_survey_production
-  username: qs_survey
-  password: <%= ENV["QS_SURVEY_DATABASE_PASSWORD"] %>
+  adapter: mysql2
+  encoding: utf8mb4
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
