--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,13 @@
 version: '3.4'
 
-volumes:
-  mysql_data:
-    driver: local
-
 services:
   app:
     build:
       context: .
     ports:
       - "3000:3000"
-    links:
-      - db
-    depends_on:
-      - db
     environment:
       RAILS_SERVE_STATIC_FILES: "yes"
-      DATABASE_URL: "mysql2://${DB_USERNAME}:${DB_PASSWORD}@db/${DB_NAME}"
+      DATABASE_URL: "mysql2://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}/${DB_NAME}"
       RAILS_MASTER_KEY: "${RAILS_MASTER_KEY}"
       AUTO_MIGRATION: "yes"
-  db:
-    image: mysql:8.0
-    volumes:
-      - mysql_data:/var/lib/mysql
-    environment:
-      MYSQL_DATABASE: "${DB_NAME}"
-      MYSQL_USER: "${DB_USERNAME}"
-      MYSQL_PASSWORD: "${DB_PASSWORD}"
-      MYSQL_ROOT_PASSWORD: "${DB_ROOT_PASSWORD}"
