--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "dependencies": {
     "@hotwired/turbo-rails": "^7.1.1",
     "autoprefixer": "^10.4.7",
+    "axios": "^0.27.2",
     "esbuild": "^0.14.38",
+    "esbuild-plugin-stimulus": "^0.1.5",
+    "jquery": "^3.6.0",
+    "jquery-ui-bundle": "^1.12.1-migrate",
     "postcss": "^8.4.13",
+    "stimulus": "^3.0.1",
     "tailwindcss": "^3.0.24"
   },
   "scripts": {
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify",
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds"
+    "build": "node esbuild.config.js"
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.14"
   }
 }
