--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "scripts": {
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify",
-    "build": "node esbuild.config.js"
+    "build": "node esbuild.config.js",
+    "dev": "node esbuild.dev.config.js"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.14"
