Change webdriver to chrome_headless

--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -55,6 +55,8 @@ jobs:
         bundle install
         yarn install
 
+    - uses: nanasess/setup-chromedriver@v1
+
     - name: Prepare
       run: |
         bundle exec rake test:prepare
