--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "@hotwired/stimulus": "^3.0.1",
     "@hotwired/turbo-rails": "^7.1.1",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
     "esbuild": "^0.14.38",
-    "esbuild-plugin-stimulus": "^0.1.5",
     "jquery": "^3.6.0",
     "jquery-ui-bundle": "^1.12.1-migrate",
     "postcss": "^8.4.13",
@@ -15,8 +15,7 @@
   },
   "scripts": {
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify",
-    "build": "node esbuild.config.js",
-    "dev": "node esbuild.dev.config.js"
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.14"
