--- a/package.json
+++ b/package.json
@@ -2,20 +2,23 @@
   "name": "app",
   "private": "true",
   "dependencies": {
-    "@hotwired/stimulus": "^3.0.1",
     "@hotwired/turbo-rails": "^7.1.1",
+    "@types/react": "^17.0.2",
+    "@types/react_ujs": "^2.6.0",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
     "esbuild": "^0.14.38",
     "jquery": "^3.6.0",
     "jquery-ui-bundle": "^1.12.1-migrate",
     "postcss": "^8.4.13",
-    "stimulus": "^3.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react_ujs": "^2.6.2",
     "tailwindcss": "^3.0.24"
   },
   "scripts": {
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify",
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds"
+    "build": "esbuild app/javascript/application.js --bundle --sourcemap --outdir=app/assets/builds"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.14"
