--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "@hotwired/turbo-rails": "^7.1.1",
+    "@mui/material": "^5.10.2",
     "@types/react": "^17.0.2",
     "@types/react_ujs": "^2.6.0",
     "autoprefixer": "^10.4.7",
