--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
     "esbuild": "^0.14.38",
+    "js-file-download": "^0.4.12",
     "postcss": "^8.4.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
